# LMS

./: .editorconfig  .gitignore  DESIGN.md  LMS_METRICS_WORKFLOW.md  README.md  README_INTEGRATION.md  README_TESTING.md  lms_events_collector.py  lms_live_collector.py  paper.txt  pyproject.toml  requirements-lms.txt
Prompt/: README.md  lms_live_collector.py  lms_ocr_extractor.py  lms_ocr_rois.example.json  lms_text_miner.py  lms_ws_analyzer.py  pyproject.toml  run_lms_bot_auto.ps1  run_lms_bot_dual.ps1  train_imitation.ps1
docs/: GAME_RUNTIME_VARIABLES.md
docs/architecture/: REPOSITORY_STRUCTURE.md
docs/research/: GITHUB_REPOS_REVIEW_2026-02-11.md  LMS_BOT_REVERSE_ENGINEERING_2026-02-12.md
docs/workflows/: ALPHASTAR_MASS_TRAINING.md  BOT_FEEDBACK_TRAINING.md  LMS_METRICS_WORKFLOW.md  LOW_AGENT_ALPHASTAR_RUN_PROTOCOL.md  LOW_AGENT_TEST_ONLY_PROTOCOL.md
lms_matchflow_v2_base_files/: README_MATCHFLOW_CODEX.md
scripts/: bootstrap_repo.ps1  organize_repo.ps1  run_alphastar_batch.ps1  run_bot_match.ps1  run_lms_bot_batch.ps1  run_lms_bot_dual_alphastar.ps1  run_server.ps1  run_training_test_routines.ps1  run_training_test_routines_high.ps1  setup.ps1  train_rl.ps1
tests/: test_acceptance_harness.py  test_alphastar_data_pipeline.py  test_alphastar_math.py  test_bot_actions.py  test_bot_safe_zone.py  test_lms_live_collector_bot.py  test_lms_live_collector_telemetry.py  test_lms_reverse_engineered_bot.py  test_replay_buffer.py  test_report_parser.py  test_rl_env.py  test_tick_loop.py
tools/: run_live_with_telemetry.ps1  telemetry_sim.py  telemetry_tui.py
(+53 files in other folders)
